--- a/app/src/main/res/drawable/btn_gradient.xml
+++ b/app/src/main/res/drawable/btn_gradient.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="30dp"/>
     <gradient
-        android:startColor="#FF5"
+        android:startColor="#FF512F"
         android:endColor="#DD2476"
         android:angle="0"/>
     <padding
