--- a/app/src/main/res/layout/activity_single_player.xml
+++ b/app/src/main/res/layout/activity_single_player.xml
@@ -25,8 +25,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <Button
+            android:id="@+id/btnRestart"
+            android:text="🔄 Restart"
+            android:textSize="16sp"
+            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-
+        <Button
+            android:id="@+id/btnSound"
+            android:text="🔊 Sound ON"
+            android:textSize="20sp"
+            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </LinearLayout>
